update: assertions and test cases added in ProductServiceTest